# tcp-ip-library

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: protocolA.h
client/src/: main.cpp  protocol-a.cpp  protocolA.cpp
lib/: CMakeLists.txt
lib/include/lib/: observer.h  observerGetNameCmd.h  observerGetNameReply.h  protocol.h  protocolA.h  tcp-client.h  tcp-connection.h  tcp-server.h
lib/proto/: get_name_cmd.proto  get_name_reply.proto  message.proto
lib/src/: observerGetNameCmd.cpp  observerGetNameReply.cpp  protocolA.cpp  tcp-client.cpp  tcp-connection.cpp  tcp-server.cpp
server/: CMakeLists.txt
server/src/: main.cpp  protocol-a.cpp  protocolA.cpp
tests/: CMakeLists.txt
